Prevent overflow of divs

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,10 @@ body{
   font-family: Genre;
 }
 
+div {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
 
